new gameboosting calculator, universal logic: services refactor
